--- a/assets/scss/widgets/pricing-table/_pricing-table.scss
+++ b/assets/scss/widgets/pricing-table/_pricing-table.scss
@@ -52,6 +52,14 @@
         margin-right: auto;
         padding: 30px;
     }
+	&-price-value {
+		display: flex;
+	}
+	&-after-part {
+		font-size: .4em;
+		line-height: 1;
+		align-self: flex-start;
+	}
     .pp-pricing-table-features {
         list-style: none;
         margin: 0;
